demos/devdocs/0.59.0/nvimage/type-aliases/ImageFromUrlOptions.md
# Type Alias: ImageFromUrlOptions

```ts
type ImageFromUrlOptions = object;
```

Defined in: [nvimage/utils.ts:158](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L158)

## Properties

### alphaThreshold?

```ts
optional alphaThreshold: boolean;
```

Defined in: [nvimage/utils.ts:184](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L184)

---

### buffer?

```ts
optional buffer: ArrayBuffer;
```

Defined in: [nvimage/utils.ts:204](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L204)

---

### cal_max?

```ts
optional cal_max: number;
```

Defined in: [nvimage/utils.ts:176](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L176)

---

### cal_maxNeg?

```ts
optional cal_maxNeg: number;
```

Defined in: [nvimage/utils.ts:192](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L192)

---

### cal_min?

```ts
optional cal_min: number;
```

Defined in: [nvimage/utils.ts:174](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L174)

---

### cal_minNeg?

```ts
optional cal_minNeg: number;
```

Defined in: [nvimage/utils.ts:190](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L190)

---

### colorbarVisible?

```ts
optional colorbarVisible: boolean;
```

Defined in: [nvimage/utils.ts:194](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L194)

---

### colormap?

```ts
optional colormap: string;
```

Defined in: [nvimage/utils.ts:170](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L170)

---

### colorMap?

```ts
optional colorMap: string;
```

Defined in: [nvimage/utils.ts:168](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L168)

---

### colormapLabel?

```ts
optional colormapLabel: LUT | null;
```

Defined in: [nvimage/utils.ts:199](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L199)

---

### colormapNegative?

```ts
optional colormapNegative: string;
```

Defined in: [nvimage/utils.ts:186](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L186)

---

### colorMapNegative?

```ts
optional colorMapNegative: string;
```

Defined in: [nvimage/utils.ts:188](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L188)

---

### frame4D?

```ts
optional frame4D: number;
```

Defined in: [nvimage/utils.ts:198](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L198)

---

### headers?

```ts
optional headers: Record<string, string>;
```

Defined in: [nvimage/utils.ts:164](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L164)

---

### ignoreZeroVoxels?

```ts
optional ignoreZeroVoxels: boolean;
```

Defined in: [nvimage/utils.ts:196](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L196)

---

### imageType?

```ts
optional imageType: ImageType;
```

Defined in: [nvimage/utils.ts:197](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L197)

---

### isManifest?

```ts
optional isManifest: boolean;
```

Defined in: [nvimage/utils.ts:202](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L202)

---

### limitFrames4D?

```ts
optional limitFrames4D: number;
```

Defined in: [nvimage/utils.ts:201](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L201)

---

### name?

```ts
optional name: string;
```

Defined in: [nvimage/utils.ts:166](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L166)

---

### opacity?

```ts
optional opacity: number;
```

Defined in: [nvimage/utils.ts:172](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L172)

---

### pairedImgData?

```ts
optional pairedImgData: null;
```

Defined in: [nvimage/utils.ts:200](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L200)

---

### percentileFrac?

```ts
optional percentileFrac: number;
```

Defined in: [nvimage/utils.ts:180](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L180)

---

### trustCalMinMax?

```ts
optional trustCalMinMax: boolean;
```

Defined in: [nvimage/utils.ts:178](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L178)

---

### url

```ts
url: string;
```

Defined in: [nvimage/utils.ts:160](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L160)

---

### urlImageData?

```ts
optional urlImageData: string;
```

Defined in: [nvimage/utils.ts:162](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L162)

---

### urlImgData?

```ts
optional urlImgData: string;
```

Defined in: [nvimage/utils.ts:203](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L203)

---

### useQFormNotSForm?

```ts
optional useQFormNotSForm: boolean;
```

Defined in: [nvimage/utils.ts:182](https://github.com/niivue/niivue/blob/main/packages/niivue/src/nvimage/utils.ts#L182)
